--- a/src/main/resources/templates/volunteer_profile.html
+++ b/src/main/resources/templates/volunteer_profile.html
@@ -52,8 +52,6 @@
 
                 </div>
 
-                <button type="button" class="edit-profile-button">Edytuj</button>
-
             </div>
 
             
@@ -81,35 +79,7 @@
 
                 <h1>Dzienniczek</h1>
 
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki, deadline - 11.11.1111</span>
-
-                </div>
-
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki, deadline - 11.11.1111</span>
-
-                </div>
-
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki, deadline - 11.11.1111</span>
-
-                </div>
+                
 
             </div>
         
@@ -254,9 +224,66 @@
 
         }
 
+        async function getTasks() {
+
+            const root = document.getElementById("tasks");
+
+            const priorityArray = [
+                "Niski",
+                "Umiarkowany",
+                "Średni",
+                "Wysoki"]
+
+            try {
+                    const response = await fetch('http://localhost:8080/api/task/volunteer', {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+
+                    const result = await response.json();
+
+                    console.log(result);
+
+                    result.forEach(task => {
+
+                        const div = document.createElement("div");
+                        div.classList.add("task");
+
+                        const h2 = document.createElement("h2");
+                        h2.classList.add("task-tittle");
+                        h2.innerHTML = task["task-title"];
+
+                        const p = document.createElement("p");
+                        p.classList.add("task-desc");
+                        p.innerHTML = task["task-desc"];
+
+                        const span = document.createElement("span");
+                        span.classList.add("priority");
+                        span.innerHTML = "Priorytet - " + priorityArray[task.priority - 1] + ", termin - " + task.deadline;
+
+                        div.appendChild(h2);
+                        div.appendChild(p);
+                        div.appendChild(span);
+
+                        root.appendChild(div);
+                        
+                    });
+
+                }
+
+            } catch (error) {
+                console.log(error);
+            }
+
+        }
+
         function goToProjectDesc() {
 
-            location.href = "http://localhost:8080/volunteer/volunteer/profile/project/" + this.dataset.projectId;
+            location.href = "http://localhost:8080/volunteer/profile/project/" + this.dataset.projectId;
 
         }
 
@@ -267,6 +294,7 @@
         document.body.onload = function () {
             getVolunteerData();
             getProjects();
+            getTasks();
         }
 
     </script>
