--- a/src/main/resources/templates/volunteer_project_desc.html
+++ b/src/main/resources/templates/volunteer_project_desc.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/volunteer-project-desc.css">
     <title>Strona główna</title>
 </head>
-<body>
+<body onload = "loadContent()">
 
     <header class="header">
 
@@ -37,29 +37,7 @@
 
         <section class="project-container">
 
-                <div class="img-container">
-
-                    <img src="images/logo2mini.jpg" alt="" class="project-img">
-
-                </div>
-
-            <div class="text-container">
-
-                <h2 class="project-tittle">Tytuł projektu</h2>
-
-                <h4 class="project-short-desc">Organizator: Organizacja 1 </h4>
-
-                <p class="project-long-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum voluptate cumque ducimus nesciunt sint ipsum nostrum provident, dolor voluptatum maiores quae praesentium. Repellat omnis exercitationem veritatis explicabo nesciunt consequuntur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam sint consectetur illum, architecto iste possimus beatae blanditiis doloribus facere vitae consequatur nobis mollitia suscipit ipsum nisi quam nulla minima! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, nobis natus! Reprehenderit, eaque quod? Impedit facere nostrum, assumenda recusandae, id optio necessitatibus, ad sapiente aliquid ratione esse ducimus cumque adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum voluptate cumque ducimus nesciunt sint ipsum nostrum provident, dolor voluptatum maiores quae praesentium. Repellat omnis exercitationem veritatis explicabo nesciunt consequuntur autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam sint consectetur illum, architecto iste possimus beatae blanditiis doloribus facere vitae consequatur nobis mollitia suscipit ipsum nisi quam nulla minima! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, nobis natus! Reprehenderit, eaque quod? Impedit facere nostrum, assumenda recusandae, id optio necessitatibus, ad sapiente aliquid ratione esse ducimus cumque adipisci.</p>
-
-                <div class="tags-container">
-
-                    <h3 class="tag-highlight">Tagi:</h3>
-                    <p class="tags">Tag1</p>
-
-                </div>
-                
-
-            </div>
+            
 
         </section>
 
@@ -67,37 +45,9 @@
 
             <h1>Lista zadań</h1>
 
-            <div class="tasks">
+            <div class="tasks" id="tasks">
 
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki</span>
-
-                </div>
-
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki</span>
-
-                </div>
-
-                <div class="task">
-
-                    <h2 class="task-tittle">Zadanie 1</h2>
-
-                    <p class="task-desc">opis zadania</p>
-
-                    <span class="priority">Priorytet - wysoki</span>
-
-                </div>
+                
 
             </div>
 
@@ -116,6 +66,151 @@
         <div class="footer-col4">col4</div>
 
     </footer>
+
+    <script defer>
+
+        const urlArray = window.location.href.split("/");
+        const projectId = urlArray.at(-1);
+
+        async function getProject() {
+                
+                const root = document.getElementsByClassName("project-container")[0];
+                
+
+                try {
+                        const response = await fetch('http://localhost:8080/api/project/' + projectId, {
+                        method: 'GET',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                    });
+
+                    if (response.ok) {
+                        const project = await response.json();
+                        console.log(project);
+                        const imgContainer = document.createElement("div");
+                        imgContainer.classList.add("img-container");
+
+                        const img = document.createElement("img");
+                        img.src = project.imgPath;
+                        img.alt = "zdjecie";
+                        img.classList.add("project-img")
+
+                        const textContainer = document.createElement("div");
+                        textContainer.classList.add("text-container");
+
+                        const projectTitle = document.createElement("h2");
+                        projectTitle.classList.add("project-tittle");
+                        projectTitle.innerHTML = project.title;
+
+                        const projectShortDesc = document.createElement("h4");
+                        projectShortDesc.classList.add("project-short-desc");
+                        projectShortDesc.innerHTML = "Organizacja - " + project.orgName;
+
+                        const projectLongDesc = document.createElement("p");
+                        projectLongDesc.classList.add("project-long-desc");
+                        projectLongDesc.innerHTML = project.desc;
+
+                        const tagsContainer = document.createElement("div");
+                        tagsContainer.classList.add("tags-container");
+
+                        const tags = document.createElement("p");
+                        tags.classList.add("tags");
+
+                        for (let x in project.tags) {
+                            tags.innerHTML += "[" + project.tags[x].desc + "] ";
+                        }
+
+                        imgContainer.appendChild(img);
+
+                        textContainer.appendChild(projectTitle);
+                        textContainer.appendChild(projectShortDesc);
+                        textContainer.appendChild(projectLongDesc);
+
+                        tagsContainer.appendChild(tags);
+
+                        textContainer.appendChild(tagsContainer);
+
+                        root.appendChild(imgContainer);
+                        root.appendChild(textContainer);
+
+                    } else {
+                        console.log("blad serwera");
+                    }
+
+                } catch (error) {
+
+                    console.log(error);
+
+                }
+
+        }
+
+        async function getTasks() {
+
+            const root = document.getElementById("tasks");
+
+            const priorityArray = [
+                "Niski",
+                "Umiarkowany",
+                "Średni",
+                "Wysoki"]
+
+            try {
+                    const response = await fetch('http://localhost:8080/api/task/volunteer/project/' + projectId, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+
+                    const result = await response.json();
+
+                    console.log(result);
+
+                    result.forEach(task => {
+
+                        const div = document.createElement("div");
+                        div.classList.add("task");
+
+                        const h2 = document.createElement("h2");
+                        h2.classList.add("task-tittle");
+                        h2.innerHTML = task["task-title"];
+
+                        const p = document.createElement("p");
+                        p.classList.add("task-desc");
+                        p.innerHTML = task["task-desc"];
+
+                        const span = document.createElement("span");
+                        span.classList.add("priority");
+                        span.innerHTML = "Priorytet - " + priorityArray[task.priority - 1] + ", termin - " + task.deadline;
+
+                        div.appendChild(h2);
+                        div.appendChild(p);
+                        div.appendChild(span);
+
+                        root.appendChild(div);
+                        
+                    });
+
+                }
+
+            } catch (error) {
+                console.log(error);
+            }
+
+        }
+
+        function loadContent() {
+
+            getProject();
+            getTasks();
+
+        }
+
+    </script>
     
 </body>
 </html>
