--- a/src/main/resources/templates/volunteer_home.html
+++ b/src/main/resources/templates/volunteer_home.html
@@ -39,45 +39,13 @@
         <div class="searchbar-container">
 
                 <input type="text" name="searchbar" id="searchbar" placeholder="Wyszukaj...">
-                <button type="submit"><i class="fa fa-search"></i></button>
+                <button type="submit" id = "searchButton"><i class="fa fa-search"></i></button>
 
         </div>
 
         <div class="projects-container">
 
-            <div class="project">
-
-                <section class="img-container">
-                        <img src="/images/logo2mini.jpg" alt="Zdjęcie projektu" class="project-img">
-                </section>
-
-                <section class="text-container">
-
-                    <h2 class="project-tittle">Projekt 1</h2>
-                    <h4 class="project-short-desc">Krótki opis projektu</h4>
-
-                </section>
-
-                <button type="button" class="project-join-button" object-id="1">Dołącz</button>
-
-            </div>
-
-            <div class="project">
-
-                <section class="img-container">
-                        <img src="" alt="Zdjęcie projektu" class="project-img">
-                </section>
-
-                <section class="text-container">
-
-                    <h2 class="project-tittle">Projekt 1</h2>
-                    <h4 class="project-short-desc">Krótki opis projektu</h4>
-
-                </section>
-
-                <button type="button" class="project-join-button">Dołącz</button>
-
-            </div>
+            
 
         </div>
         
@@ -98,7 +66,7 @@
 
     <script defer>
 
-        var root1 = document.getElementsByClassName("projects-container")[0];
+        const root1 = document.getElementsByClassName("projects-container")[0];
         async function getProjects() {
             try {
                 const response = await fetch('http://localhost:8080/api/project/all', {
@@ -110,7 +78,56 @@
 
                 if (response.ok) {
                     const result = await response.json();
-                    result.forEach(project => {
+
+                    showProjects(result);
+
+                } else {
+                    console.log('Blad odpowiedzi serwera', await response.body);
+                }
+
+            } catch (error) {
+                console.error('Error', error);
+            }
+
+        }
+
+        async function searchProjects(word, event) {
+
+            event.preventDefault();
+
+            try {
+                const response = await fetch('http://localhost:8080/api/project/search/' + word , {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+
+                    const result = await response.json();
+
+                    root1.innerHTML = "";
+
+                    showProjects(result);
+
+
+                } else if (response.status = 404) {
+
+                    root1.innerHTML = "<h2> Nie znaleziono projektów </h2>";
+
+                }
+            } catch (error) {
+
+                console.log(error);
+
+            }
+
+        }
+
+        function showProjects(result) {
+
+            result.forEach(project => {
                         console.log(project);
 
                         const projectDiv = document.createElement("div");
@@ -127,8 +144,20 @@
                         const textSection = document.createElement("section");
                         textSection.classList.add("text-container");
 
+                        let projectDesc;
+
+                        console.log(project['desc-long']);
+                        console.log(project.desc);
+
+                        if (project['desc-long'])
+                        {
+                            projectDesc = project['desc-long'];
+                        } else if (project.desc){
+                            projectDesc = project.desc;
+                        }
+
                         textSection.innerHTML = ' <h2 class="project-tittle">' + project.title + 
-                            ' </h2> <p class="project-short-desc">' + project['desc-long'] + '</p>';
+                            ' </h2> <p class="project-short-desc">' +projectDesc + '</p>';
 
                         const tags = document.createElement("h4");
                         tags.innerHTML = "Tagi: "
@@ -154,22 +183,19 @@
                         root1.appendChild(projectDiv);
                     })
 
-                } else {
-                    console.log('Blad odpowiedzi serwera', await response.body);
-                }
-
-            } catch (error) {
-                console.error('Error', error);
-            }
-
         }
-
 
         function goToProjectDesc(event) {
 
             location.href = "http://localhost:8080/volunteer/projects/" + this.dataset.projectId;
 
         }
+
+        document.getElementById("searchButton").addEventListener("click", (event) => {
+            
+            const word = document.getElementById("searchbar").value;
+            searchProjects(word, event);
+        });
 
     </script>
     
