--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,7 +58,6 @@
             </div>
 
         </div>
-        
 
     </main>
 
@@ -72,6 +71,12 @@
         <div class="footer-col4">col4</div>
 
     </footer>
+
+    <script>
+
+    
+
+    </script>
     
 </body>
 </html>
